added GUI, debugging for mainWindow
search by date interval is not finished

--- a/Autobus_2.0/.classpath
+++ b/Autobus_2.0/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/src/Semester 2/SDJ2 &amp; AJP2/RemoteObserverDelegate.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
